<resources>
    <string name="app_name">User</string>
    <string name="user_hint_phone">请输入您的手机号码</string>
    <string name="user_safe_login">短信快捷登录</string>
    <string name="user_regist_bind">绑定微鲸账户</string>
    <string name="user_regist_ori">注册微鲸账户</string>
    <string name="user_forget_pwd">忘记密码</string>
    <string name="user_find_pwd">找回密码</string>
    <string name="user_again_pwd">重置密码</string>
    <string name="user_regist_setting">设置账户</string>
    <string name="user_again_pwd_success">重置密码成功</string>
    <string name="user_hint_psw">请输入密码</string>
    <string name="user_hint_msm">请输入安全码</string>
    <string name="user_hint_name">请输入昵称</string>
    <string name="user_sms_code_send">短信安全码已发送...</string>
    <string name="user_btn_get_sms_code_waiting">%1$d秒</string>
    <string name="user_fetch_code">获取安全码</string>
    <string name="user_hint_validate">请输入验证码</string>
    <string name="user_title_login">登录</string>
    <string name="user_title_register">注册</string>
    <string name="user_setting_password">设置密码</string>
    <string name="user_btn_login">登录</string>
    <string name="user_btn_next">下一步</string>
    <string name="user_connect_us">联系我们</string>
    <string name="user_hint_nickname">填写昵称</string>

    <string name="user_register_user_agreement">注册代表您同意微鲸VR用户协议</string>
    <string name="user_empty_phone">手机号不能为空</string>
    <string name="user_error_phone">手机号格式不正确</string>
    <string name="user_empty_smscode">安全码不能为空</string>
    <string name="user_empty_validate_code">图片验证码不能为空</string>
    <string name="user_empty_smscode_error">验证码错误, 请重新输入,或点击刷新验证码</string>
    <string name="user_empty_sms_code_err">安全码输入错误, 请重新输入</string>
    <string name="user_sms_code_err">安全码获取失败，请重试</string>
    <string name="user_login_success">登录成功</string>
    <string name="user_register_success">注册成功</string>
    <string name="text_operator_success">操作成功</string>
    <string name="user_avatar">头像</string>
    <string name="user_password">密码</string>
    <string name="user_go_to_reset">前往重置</string>
    <string name="user_name">昵称</string>
    <string name="user_phone">手机</string>
    <string name="text_logout">退出登录</string>
    <string name="user_edit_nickname">昵称长度3-30个字符，1个中文占3个字符</string>
    <string name="user_edit_pwd">密码长度6-20个位，数字、字母、下划线至少包含两种</string>
    <string name="user_edit_nickname_illegal">昵称包含非法字符</string>
    <string name="user_title_edit_nickname">修改昵称</string>
    <string name="user_title_edit_password">修改密码</string>
    <string name="user_empty_password">密码不能为空</string>
    <string name="user_text_save">保存</string>
    <string name="user_input_ori_password">请输入原密码</string>
    <string name="user_ori_password_err">原密码错误</string>
    <string name="user_ori_new_password_same">新密码和原密码一样</string>
    <string name="user_input_new_password">请输入新密码</string>
    <string name="user_input_new_password_again">请再次输入新密码</string>
    <string name="user_new_password_differ">两次密码输入不一致</string>
    <string name="user_title_edit_phone">修改手机</string>
    <string name="user_edit_phone_success">修改手机后需要重新登录，确定继续吗？</string>
    <string name="user_title_edit_pwd_success">修改密码需重新登录，确定继续吗？</string>
    <string name="user_old_phone">原号码：</string>
    <string name="user_input_new_phone">请输入新手机号码</string>
    <string name="user_button_confirm">确认</string>
    <string name="user_phone_no_register">手机号未注册</string>
    <string name="user_confirm_edit_pwd">确定重置密码吗？</string>
    <string name="user_empty_password_old_error">新密码与旧密码一样，您可以使用此密码直接登录</string>
    <string name="user_empty_password_input_error"> 输入有误，请检查后重新输入</string>
    <string name="user_bind_cancel">绑定已取消</string>
    <string name="user_bind_failed">绑定失败</string>
    <string name="user_bind_sucess">绑定成功</string>
    <string name="user_unbind_sucess">解绑成功</string>
    <string name="user_unbind_failed">解绑失败</string>
    <string name="user_unbind">是否要取消绑定</string>
    <string name="text_title_user_info">个人信息</string>
    <string name="text_avatar_set">选取</string>
    <string name="text_title_third_bind">第三方账号绑定</string>
    <string name="text_big_avatar">头像大图</string>
    <string name="share_no_weixin">沒有安装微信</string>
    <string name="share_no_qq">沒有安装QQ</string>
    <string name="text_logout_confirm">是否要退出登录？</string>
</resources>
